<resources>
    <string name="ad_banner_navigator_id">ca-app-pub-9482444832041182/1405015740</string>
    <string name="ad_banner_buy_id">ca-app-pub-9482444832041182/9903479792</string>
    <string name="ad_banner_recipes_id">ca-app-pub-9482444832041182/7205388941</string>
    <string name="app_name">Smart Planet R</string>
    <string name="app_name_beta">Smart Planet R (beta)</string>
    <string name="msgbox_default_title">Заголовок</string>
    <string name="msgbox_default_message">Текст сообщения</string>
    <string name="msgbox_default_positive">Да</string>
    <string name="msgbox_default_negative">Нет</string>
    <string name="msgbox_default_neutral">Отмена</string>
    <string name="navigator_reg">Регистрация</string>
    <string name="navigator_reg_description">Требуется для возможности отправки списков</string>
    <string name="navigator_private">Личный кабинет</string>
    <string name="navigator_private_description">Просмотр и изменение личных параметров</string>
    <string name="navigator_list">Списки покупок</string>
    <string name="navigator_list_description">Ваши списки покупок</string>
    <string name="navigator_friend">Мои контакты</string>
    <string name="navigator_friend_description">Управление вашими контактами</string>
    <string name="navigator_group">Группы товаров</string>
    <string name="navigator_group_description">Сортировка и изменение справочника групп товаров, используемых для
        составления списков
    </string>
    <string name="navigator_product">Продукты</string>
    <string name="navigator_product_description">Фермерские продукты с доставкой</string>
    <string name="navigator_recipe">Рецепты</string>
    <string name="navigator_recipe_description">Рецепты приготовления блюд</string>
    <string name="navigator_setting">Настройки</string>
    <string name="navigator_setting_description">Настройки приложения</string>
    <string name="navigator_feedback">Оценить приложение</string>
    <string name="navigator_feedback_description">Нам важно ваше мнение</string>
    <string name="navigator_test">Тестирование</string>
    <string name="navigator_test_description">Тестирование списков</string>
    <string name="navigator_menu_exit">Выход</string>
    <string name="navigator_exit_title">Подтверждение</string>
    <string name="navigator_exit_message">Вы действительно хотите выйти?</string>
    <string name="navigator_exit_caption_yes">Да</string>
    <string name="navigator_exit_caption_no">Нет</string>
    <string name="personal_name_caption">Ваше текущее имя</string>
    <string name="personal_new_account_name_caption">Имя для нового профиля</string>
    <string name="personal_change_name_button_caption">Сменить имя</string>
    <string name="personal_change_name_equals">Для смены имени введите его в поле выше</string>
    <string name="personal_change_name_process">Идет процесс смены имени</string>
    <string name="personal_change_name_success">Ваше имя успешно изменено</string>
    <string name="personal_change_name_fail">Произошла ошибка при изменении имени</string>
    <string name="personal_new_account_description">
        Вы можете создать новый профиль. Укажите имя пользователя в поле ниже и нажмите конопку.
        \nВнимание! При создании нового профиля вы потеряете связь со всеми контактами текущего профиля
    </string>
    <string name="personal_new_account_button_caption">Создать другой профиль</string>
    <string name="personal_back_button_caption">Вернуться в меню.</string>
    <string name="personal_confirm_new_account_title">Создание профиля</string>
    <string name="personal_confirm_new_account_message">Вы уверены что хотите удалить текущий профиль и создать новый?
    </string>
    <string name="personal_confirm_new_account_positive">Да</string>
    <string name="personal_confirm_new_account_negative">Отменить</string>
    <string name="registration_name_caption">Укажите ваше имя</string>
    <string name="registration_button_caption">Зарегистрироваться</string>
    <string name="registration_later_button_caption">Отложить регистрацию</string>
    <string name="registration_cancel_button_caption">Вернуться в меню</string>
    <string name="registration_info_description">
        Регистрация необходима для отправки и получения списков.
        Для регистрации потребуется только ваше имя, ник и т.п.
        Как вы себя назовете, так вы и будете отображаться у ваших друзей.
    </string>
    <string name="registration_progress_message">Ожидаем подтверждение с сервера</string>
    <string name="registration_success_title">Регистрация успешна</string>
    <string name="registration_success_message">Теперь, вы можете делиться списками со своими близкими и друзьями.
        Для добавления контактов перейдите в раздел
        <b>Мои контакты</b>
    </string>
    <string name="friend_empty_list">Список контактов пуст.\nНажмите (+) для добавления</string>
    <string name="friend_activity_title">Контакты</string>
    <string name="friend_activity_title_select">Выберите контакт</string>
    <string name="friend_activity_title_selected_items">Выбрано %1$s из %2$s</string>
    <string name="friend_popup_menu_edit">Изменить</string>
    <string name="friend_popup_menu_delete">Удалить</string>
    <string name="friend_name_dialog_title">Переименовать контакт</string>
    <string name="friend_name_dialog_message">Укажите новое имя контакта</string>
    <string name="friend_name_dialog_ok_caption">OK</string>
    <string name="friend_name_dialog_cancel_caption">Отмена</string>
    <string name="friend_dialog_delete_title">Удаление контактов (%1$s)</string>
    <string name="friend_dialog_delete_message">Подтвердите удаление %1$s из контактов</string>
    <string name="friend_dialog_delete_yes">Удалить</string>
    <string name="friend_dialog_delete_no">Отмена</string>
    <string name="friend_delete_process">Производится удаление котакта</string>
    <string name="friend_delete_success">Контакт успешно удален</string>
    <string name="friend_dialog_choose_title">Выберите вариант</string>
    <string name="friend_dialog_choose_message">
        Желаете создать приглашение нажмите **Пригласить**
        \nЕсли вы получили приглашение, то нажмите **Ввести код**.
    </string>
    <string name="friend_dialog_choose_yes">Пригласить</string>
    <string name="friend_dialog_choose_no">Ввести код</string>
    <string name="friend_dialog_noreg_title">Необходима регистрация</string>
    <string name="friend_dialog_noreg_message">Ой! Чтобы добавить контакты, нужно пройти регистрацию.</string>
    <string name="friend_dialog_noreg_yes">Регистрация</string>
    <string name="friend_dialog_noreg_no">Отмена</string>
    <string name="friend_process_get_invite_message">Ожидаем создание приглашения на сервере</string>
    <string name="friend_cant_create_invite_message">Для создания приглашения вам необходимо зарегестрироваться</string>
    <string name="friend_cant_apply_invite_message">Для активации приглашения вам необходимо зарегестрироваться</string>
    <string name="friend_dialog_preview_invite_title">Приглашение создано</string>
    <string name="friend_dialog_preview_invite_message">Номер приглашения **%1$s**
        \nТеперь его необходимо ввести на другом устройстве для активации.
        Приглашение действует 2 суток, и может быть использованно 1 раз.
    </string>
    <string name="friend_dialog_preview_invite_yes">Отправить СМС</string>
    <string name="friend_dialog_preview_invite_no">Скопировать</string>
    <string name="friend_dialog_confirm_send_title">Подтверждение</string>
    <string name="friend_dialog_confirm_send_message">Отправить список контакту %s?</string>
    <string name="friend_dialog_confirm_send_yes">Да</string>
    <string name="friend_dialog_confirm_send_no">Отмена</string>
    <string name="friend_send_invite_sms_txt">Номер приглашения в ЧеКупил %1$s</string>
    <string name="friend_toast_invite_copy_success">Номер приглашения скопирован в буфер</string>
    <string name="friend_toast_invite_copy_error">Не поддерживается копирование в буфер</string>
    <string name="invite_activity_title">Активация приглашения</string>
    <string name="invite_info_message">Введите сюда код приглашения, который вы получили от друга</string>
    <string name="invite_activate_code_text_caption">Код приглашения</string>
    <string name="invite_button_activate_code_caption">Активировать</string>
    <string name="invite_button_cancel_caption">Отмена</string>
    <string name="invite_message_empty_code">Вы забыли указать код приглашения</string>
    <string name="invite_message_add_friend">Добавлен в список контактов</string>
    <string name="invite_process_activate_message">Код приглашения проверяется</string>
    <string name="feedback_activity_title">Оценка приложения</string>
    <string name="feedback_button_like_caption">Оценить в Google Play</string>
    <string name="feedback_button_cancel_caption">Не сейчас</string>
    <string name="shopping_title_activity_selected">Выделено %1$s из %2$s</string>
    <string name="shopping_menu_delete">Удалить</string>
    <string name="shopping_menu_edit">Переименовать</string>
    <string name="shopping_empty_list">У вас нет ни одного списка.\nНажмите (+) для добавления</string>
    <string name="shopping_new_name_template">Что купить %s</string>
    <string name="shopping_name_dialog_title">Наименование списка</string>
    <string name="shopping_name_dialog_message">Укажите наименование списка</string>
    <string name="shopping_name_dialog_ok_caption">OK</string>
    <string name="shopping_name_dialog_cancel_caption">Отмена</string>
    <string name="shopping_dialog_delete_title">Удаление</string>
    <string name="shopping_dialog_delete_message">Удалить выделенные списки покупок?</string>
    <string name="shopping_dialog_delete_yes">Да</string>
    <string name="shopping_dialog_delete_no">Отмена</string>
    <string name="shopping_delete_success">Списки успешно удалены</string>
    <string name="buy_empty_list">Список покупок пуст.\nНажмите кнопку + для добавления</string>
    <string name="buy_search_add_item">Введите первые символы товара</string>
    <string name="buy_menu_send">Отправить</string>
    <string name="buy_menu_edit">Переименовать</string>
    <string name="buy_menu_delete">Удалить купленные</string>
    <string name="buy_menu_sort_group">Сортировка списка</string>
    <string name="buy_menu_deselect_all">Снять выделение</string>
    <string name="buy_menu_select_all">Выделить все</string>
    <string name="buy_menu_inversion_all">Инверсия выделения</string>
    <string name="buy_menu_test_fill">Тестовое заполение</string>
    <string name="buy_dialog_name_caption">Что купить</string>
    <string name="buy_dialog_amount_caption">Сколько</string>
    <string name="buy_dialog_ok_caption">OK</string>
    <string name="buy_dialog_cancel_caption">Отмена</string>
    <string name="buy_dialog_fail_ammount">Неверно указано количество</string>
    <string name="buy_delete_dialog_title">Подтверждение</string>
    <string name="buy_delete_dialog_message">Удалить купленные позиции?</string>
    <string name="buy_delete_dialog_yes">Удалить</string>
    <string name="buy_delete_dialog_no">Отмена</string>
    <string name="buy_dialog_select_all_title">Подтверждение</string>
    <string name="recipe_view_image_description">Пример готового блюда</string>
    <string name="recipe_view_buys_caption">Ингредиенты</string>
    <string name="recipe_view_description_caption">Приготовление</string>
    <string name="recipe_view_get_shoplist_button">Добавить в список покупок</string>
    <string name="product_view_image_description">qwer</string>
    <string name="product_view_category">qwer</string>
    <string name="product_view_status">qwer</string>
    <string name="product_view_manufacture">qwer</string>
    <string name="product_view_description_caption">qwer</string>
    <string name="show_on_map_button_text">Показать на карте</string>
</resources>