<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/buy_menu_send_shop_list"
            android:icon="@drawable/ic_send"
            android:orderInCategory="10"
            android:title="@string/buy_menu_send"
            app:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/buy_menu_rename_shop_list"
            android:icon="@drawable/ic_edit"
            android:orderInCategory="20"
            android:title="@string/buy_menu_edit"
            app:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/buy_menu_delete_select_buy"
            android:icon="@drawable/ic_delete"
            android:orderInCategory="30"
            android:title="@string/buy_menu_delete"
            app:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/buy_menu_sort_group"
            android:orderInCategory="35"
            android:title="@string/buy_menu_sort_group"
            app:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/buy_menu_deselect_all_shopping"
            android:orderInCategory="40"
            android:title="@string/buy_menu_deselect_all"
            app:showAsAction="withText"/>
    <item
            android:id="@+id/buy_menu_select_all_shopping"
            android:orderInCategory="50"
            android:title="@string/buy_menu_select_all"
            app:showAsAction="withText"/>
    <item
            android:id="@+id/buy_menu_inversion_all"
            android:orderInCategory="60"
            android:title="@string/buy_menu_inversion_all"
            app:showAsAction="withText"/>
    <!--<item-->
            <!--android:id="@+id/buy_menu_test_fill"-->
            <!--android:orderInCategory="70"-->
            <!--android:title="@string/buy_menu_test_fill"-->
            <!--app:showAsAction="withText"/>-->
</menu>