<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/CommonActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/recipe_common_margin"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/recipe_view_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                <ProgressBar
                        android:id="@+id/recipe_view_loading"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"/>
                <ImageView
                        android:id="@+id/recipe_view_image"
                        android:layout_marginTop="@dimen/recipe_space"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/recipe_view_image_description"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/recipe_space"
                    android:orientation="vertical">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/recipe_view_buy_background"
                        android:layout_margin="@dimen/recipe_common_margin">
                    <TextView
                            android:id="@+id/recipe_view_buys_caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textStyle="italic"
                            android:textSize="16sp"
                            android:text="@string/recipe_view_buys_caption"/>
                    <TextView
                            android:id="@+id/recipe_view_buys"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="16sp"/>
                    <Button
                            android:id="@+id/recipe_view_get_shoplist_button"
                            android:layout_marginTop="@dimen/recipe_space"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/recipe_view_get_shoplist_button"/>
                </LinearLayout>
                <TextView
                        android:id="@+id/recipe_view_description_caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/recipe_space"
                        android:layout_gravity="center"
                        android:textStyle="italic"
                        android:textSize="16sp"
                        android:text="@string/recipe_view_description_caption"/>
                <TextView
                        android:id="@+id/recipe_view_description"
                        android:layout_marginTop="@dimen/recipe_space"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
